# shufflish

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
doc/: prep.py
doc/source/: api_reference.rst  conf.py
shufflish/: __init__.py  _affine.c  _affine.h  _affine.pyx  _affine_cipher.h  _affine_cipher.pxd  affine.c  affine.h  affine.pyx
test/: test_access.py  test_cipher.py  test_completeness.py  test_creation.py  test_dunder.py
