[project]
name = "shufflish"
description = "shufflish - For when you kinda need to shuffle something."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Joachim Folz", email = "joachim.folz@dfki.de" }]
keywords = [
    "shuffle",
    "shuffling",
    "random",
    "rng",
    "affine",
    "cipher",
    "affine cipher",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/jfolz/shuffling/blob/master/README.md"
Source = "https://gitlab.com/jfolz/shuffling"
Tracker = "https://gitlab.com/jfolz/shuffling/issues"

[build-system]
requires = ["setuptools>=50.0.3", "wheel", "cython~=3.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "shufflish/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["shufflish", "shufflish.*"]
namespaces = false

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest>=5.3.2"
test-command = "pytest {project}/test -vv"
