[project]
name = "shufflish"
description = "For when you kinda need to shuffle enormous lists."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Joachim Folz", email = "joachim.folz@dfki.de" }]
keywords = [
    "shuffle",
    "shuffling",
    "permutation",
    "random",
    "rng",
    "affine",
    "cipher",
    "affine cipher",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jfolz/shufflish"
Documentation = "https://shufflish.readthedocs.io/stable/"
Repository = "https://github.com/jfolz/shufflish"
Issues = "https://github.com/jfolz/shufflish/issues"
Changelog = "https://github.com/jfolz/shufflish/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=50.0.3", "wheel", "cython~=3.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "shufflish/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["shufflish", "shufflish.*"]
namespaces = false

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest>=5.3.2"
test-command = "pytest {project}/test -vv"
